# lightning_System_jobsystem

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Include/Groups/: BaseMember.hpp  Group.hpp  GroupTraits.hpp  IMember.hpp  RootGroup.h
Include/Job_System/: Job.h  JobHandel.h  JobPool.h  JobQueue.cpp  JobQueue.h  JobSystem.h  Job_Queue.h  Worker.h  Worker_Manger.h
Include/TaskSystem/: ITask.h  Scheduler.h  TaskHandel.h  TaskQueue.h  Worker.h
Include/World/: BaseSystem.h  ISystem.h  World.h
src/Group_System/: RootGroup.cpp
src/Job_System/: Job.cpp  JobHandel.cpp  JobPool.cpp  JobSystem.cpp  Job_Queue.cpp  Worker.cpp  Worker_Manger.cpp
src/TaskSystem/: Scheduler.cpp  TaskHandel.cpp  TaskQueue.cpp  Worker.cpp
src/World/: World.cpp
